<resources>
    <string name="app_name">Assignment1</string>
    <string name="action_settings">Settings</string>
    <string name="Date">Date</string>
    <string name="Station">Station</string>
    <string name="Odometer">Odometer</string>
    <string name="FuelGrade">Fuel Grade</string>
    <string name="FuelAmount">Fuel Amount</string>
    <string name="FuelUnitCost">Unit Cost</string>
    <string name="FuelCost">Total Cost</string>
    <string name="DateInput">Date (yyyy/mm/dd)</string>
    <string name="NewEntry">New Entry</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="overallCost">Total Overall Cost:</string>
    <string name="zeroCost">$0.00</string>
    <string name="title_activity_new_entry">NewEntryActivity</string>
</resources>
